Copied all of spakman.nl/javascript

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         </title>
     </head>
     <body>
-        <h1>Title </h1>
-        Text
-        <a href="./second.html">second page</a>
+        Interactive pages:
+        <a href="./javascript/index.html">JavaScribbles</a>
     </body>
 </html>
